# konfsave

./: .gitignore  .kateproject  MANIFEST.in  README.md  actions.py  arguments.py  config.py  constants.py  install.sh  main.py  profiles.py  setup.cfg
konfsave/: __init__.py  __main__.py  actions.py  archive.py  config.py  constants.py  default_config.ini  profiles.py
konfsave/profiles/: __init__.py  archive.py  load.py  manage.py  save.py  utils.py  vcs.py
