[metadata]
name = konfsave
version = 0.1.1
author = selplacei
author_email = ilyaviaik@gmail.com
license = Apache 2.0
license_file = LICENSE
description = Easy saving and switching between multiple KDE configurations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selplacei/konfsave
project_urls =
	Issue Tracker = https://github.com/selplacei/konfsave/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Topic :: Desktop Environment :: K Desktop Environment (KDE)
	Topic :: System :: Archiving

[options]
packages = find:
python_requires = >=3.8
